--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div id="sub_icons">
-            <div class="seleted">
+            <div class="selected">
                 <i class="fas fa-border-all"></i>
             </div>
             <div>
