--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
-       <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+        <script src="script.js"></script>
     </head>
 
     <body>
@@ -22,7 +23,7 @@
             </div>
             <div id="profile_info">
                 <div id="id">
-                    juyeeeeon
+                    <span>juyeeeeon</span>
                     <i class="fas fa-cog"></i>
                 </div>
                 <button>프로필 편집</button>
@@ -31,12 +32,12 @@
 
         <div>
             <p>
-                <strong>
+                <strong id="userInfo">
                     이주연 (JuYeon Lee)
                 </strong><br/>
-                학생
+                <span id="summary">학생</span>
             </p>
-            <p>
+            <p id="profileDetail">
                 <a href="https://juyeeeeon.github.io">
                     juyeeeeon.github.io
                 </a>
